--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -4,7 +4,7 @@ user.password = 11111111
 grid2.hub=${grid2.hub}
 
 site.url = http://automationpractice.com/index.php
-browser.name = htmlunit
+browser.name = firefox
 headlessmode = true
 browser.version=${browser.version}
 browser.platform=${browser.platform}
